--- a/src/app/common-ui/sort-select/sort-select.scss
+++ b/src/app/common-ui/sort-select/sort-select.scss
@@ -1,18 +1,20 @@
 .sort{
   margin-top: 20px;
   margin-bottom: 20px;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 18px;
 }
 
 .dropdown-buttons{
   display: flex;
   flex-direction: column;
-  padding: 3px;
+  padding: 5px;
+  width: 150px;
 }
 
 
 .profile-button{
-  font-size: 14px;
-  width: 100px;
+  width: 100%;
+  font-size: 18px;
+  font-weight: 500;
 }
