--- a/src/app/pages/advertisements-page/advertisements-page.html
+++ b/src/app/pages/advertisements-page/advertisements-page.html
@@ -46,8 +46,8 @@
             }
           </div>
         } @else {
-          <div class="cards-container">
-            <h1>Нет объявлений(((</h1>
+          <div class="cards-container" style="width: 1000px">
+            <h1 style="color: #939393" >В этой категории ничего нет...</h1>
           </div>
         }
       </div>
