--- a/src/app/pages/task-page/task-page.scss
+++ b/src/app/pages/task-page/task-page.scss
@@ -6,7 +6,6 @@
 .main-block{
   display: flex;
   flex-direction: row;
-  gap: 100px;
 }
 
 .categories-block{
@@ -18,3 +17,8 @@
   flex-direction: column;
   gap: 10px;
 }
+
+.navigation-block{
+  margin-top: 30px;
+}
+
