--- a/src/app/pages/my-tasks-page/my-task-card/my-task-card.html
+++ b/src/app/pages/my-tasks-page/my-task-card/my-task-card.html
@@ -58,18 +58,9 @@
                         Favorite
                       </button>
 
-                      <button
-                        class="buttons"
-                        appearance="secondary-grayscale"
-                        iconStart="@tui.message-circle"
-
-                        tuiIconButton
-                        type="button"
-                        [style.border-radius.%]="100"
-                        (click)="getContacts()"
-                      >
-                        Favorite
-                      </button>
+                      <app-get-contacts-button
+                        [id]="worker.id"
+                      ></app-get-contacts-button>
 
                       <button
                         class="buttons"
@@ -98,18 +89,9 @@
                 </div>
 
                 <div class="right-response-actions">
-                  <button
-                    class="buttons"
-                    appearance="secondary-grayscale"
-                    iconStart="@tui.message-circle"
-
-                    tuiIconButton
-                    type="button"
-                    [style.border-radius.%]="100"
-                    (click)="getContacts()"
-                  >
-                    Favorite
-                  </button>
+                  <app-get-contacts-button
+                  [id]="task.acceptedWorker.id"
+                  ></app-get-contacts-button>
                 </div>
               </div>
 
