--- a/src/app/pages/my-tasks-page/my-response-card/my-response-card.html
+++ b/src/app/pages/my-tasks-page/my-response-card/my-response-card.html
@@ -26,15 +26,9 @@
               </div>
 
               <div class="card-text-right">
-                <button
-                  class="answer-button"
-                  iconStart="@tui.message-circle"
-                  appearance="primary-grayscale"
-                  size="m"
-                  tuiButton
-                  type="button"
-                  (click)="responseTask(task.id)"> Связаться с заказчиком
-                </button>
+                <app-get-contacts-button
+                [id]="task.authorId"
+                ></app-get-contacts-button>
 
                 <div>
                   <div class="card-description">Откликов: {{task.workers.length}}</div>
@@ -64,16 +58,7 @@
               </div>
 
               <div class="card-text-right">
-                <button
-                  class="answer-button"
-                  iconStart="@tui.message-circle"
-                  appearance="primary-grayscale"
-                  size="m"
-                  tuiButton
-                  type="button"
-                  (click)="responseTask(task.id)"> Связаться с заказчиком
-                </button>
-
+                <app-get-contacts-button [id]="task.authorId"></app-get-contacts-button>
                 <div>
                   <div class="card-description">Откликов: {{task.workers.length}}</div>
 
