crud advertisements/tasks

--- a/src/app/common-ui/navbar/navbar.html
+++ b/src/app/common-ui/navbar/navbar.html
@@ -118,6 +118,18 @@
             type="button"
             size="s"
             iconStart="@tui.layout-list"
+            (click)="toMyAdvertisementsPage()"
+          >
+            Мои объявления
+          </button>
+
+          <button
+            class="profile-button"
+            appearance="flat-grayscale"
+            tuiButton
+            type="button"
+            size="s"
+            iconStart="@tui.layout-list"
             (click)="toMyTasksPage()"
           >
             Мои заказы
