--- a/src/app/pages/feed-page/feed-page.html
+++ b/src/app/pages/feed-page/feed-page.html
@@ -17,7 +17,7 @@
     <div class="main-image">
       <img
         class="tinder-image"
-        [src]="advertisements[currentCard].imagesId.imageUrls[0]"
+        [src]="advertisements[currentCard].images.imageUrls[0]"
         [alt]="advertisements[currentCard].title"
       />
     </div>
