--- a/src/app/common-ui/adverticement-card/advertisement-card.html
+++ b/src/app/common-ui/adverticement-card/advertisement-card.html
@@ -3,9 +3,9 @@
   tuiAppearance="floating"
   >
 
-  @if (advertisement.imagesId.imageUrls) {
+  @if (advertisement.images.imageUrls) {
     <img
-      [src]="advertisement.imagesId.imageUrls[0]"
+      [src]="advertisement.images.imageUrls[0]"
       class="adv-image"
       [alt]="advertisement.title"
       (click)="toAdvertisement(advertisement.id)"
@@ -28,10 +28,23 @@
     </div>
 
     <div class="card-actions">
-      <app-like-button
-        [advertisement]="advertisement"
-        [favouriteAdvertisements]="favouriteAdvertisements"
-      ></app-like-button>
+
+      @if(authService.getMe() == advertisement.authorId){
+        <button
+          appearance="action-grayscale"
+          iconStart="pencil"
+          size="m"
+          tuiButton
+          type="button"
+          (click)="editAdvertisement(advertisement.id)">
+        </button>
+
+      } @else {
+        <app-like-button
+          [advertisement]="advertisement"
+          [favouriteAdvertisements]="favouriteAdvertisements"
+        ></app-like-button>
+      }
     </div>
 
   </div>
