--- a/src/app/common-ui/task-card/task-card.html
+++ b/src/app/common-ui/task-card/task-card.html
@@ -20,14 +20,26 @@
 
           <div class="card-text-right">
 
-            <button
-              class="answer-button"
-              appearance="primary-grayscale"
-              size="l"
-              tuiButton
-              type="button"
-              (click)="responseTask(task.id)"> Откликнуться
-            </button>
+            @if(authService.getMe() == task.authorId){
+              <button
+                appearance="action-grayscale"
+                iconStart="pencil"
+                size="m"
+                tuiButton
+                type="button"
+                (click)="editTask(task.id)">
+              </button>
+            }
+            @else {
+              <button
+                class="answer-button"
+                appearance="primary-grayscale"
+                size="l"
+                tuiButton
+                type="button"
+                (click)="responseTask(task.id)"> Откликнуться
+              </button>
+            }
             <div>
               <div class="card-description">Откликов: {{task.workers.length}}</div>
             </div>
