--- a/src/app/common-ui/adverticement-card/advertisement-card.html
+++ b/src/app/common-ui/adverticement-card/advertisement-card.html
@@ -29,7 +29,7 @@
 
     <div class="card-actions">
 
-      @if(authService.getMe() == advertisement.authorId){
+      @if(authService.getMe() == advertisement.authorId || authService.getRole() == 'ADMIN'){
         <button
           appearance="action-grayscale"
           iconStart="pencil"
