--- a/src/app/common-ui/task-card/task-card.html
+++ b/src/app/common-ui/task-card/task-card.html
@@ -20,7 +20,7 @@
 
           <div class="card-text-right">
 
-            @if(authService.getMe() == task.authorId){
+            @if(authService.getMe() == task.authorId || authService.getRole() == 'ADMIN'){
               <button
                 appearance="action-grayscale"
                 iconStart="pencil"
